style(RowRoot): adjustments to the CSS of the div that contains the subcomponents in order to keep them all equally aligned. Additionally some corrections were made to the CSS of some subcomponents (Customer, CustomerEmail, Driver, FreightCode and OccurrenceType)

--- a/src/components/Row/CustomerEmail/customerEmail.module.css
+++ b/src/components/Row/CustomerEmail/customerEmail.module.css
@@ -1,11 +1,7 @@
-.container {
-  display: flex;
-  align-items: center;
-}
-
 .email {
-  max-width: 253px;
+  max-width: 232px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  color: #1A556D;
 }
