--- a/src/components/Row/RowRoot/rowRoot.module.css
+++ b/src/components/Row/RowRoot/rowRoot.module.css
@@ -13,6 +13,11 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  font-size: 20px;
+  justify-content: space-between;
+}
+
+.content p {
+  flex: 1;
+  text-align: left;
+  padding: 0 30px;
 }
